--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: 1.0.0
   flutter_riverpod: ^0.12.3+1
   firebase_core: ^0.7.0
   cloud_firestore: ^0.16.0
