--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,9 +59,8 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
 }
-rootProject.ext {
-    set('FlutterFire', [
-            FirebaseSDKVersion: '25.12.0'
-    ])
-}
+
