--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^0.20.0+1
   stacked_services: ^0.6.6
   auto_route: ^0.6.9
+  smart_select: ^4.3.2
 
 dev_dependencies:
   auto_route_generator: ^0.6.10
