--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: 1.0.0
-  flutter_riverpod: ^0.12.3+1
+
+#  State Management
+  hooks_riverpod: ^0.12.4
+  flutter_hooks:
+#  Firebase
   firebase_core: ^0.7.0
   cloud_firestore: ^0.16.0
   firebase_auth: ^0.20.0+1
+#  Services
+  shared_preferences: ^0.5.11
   stacked_services: ^0.6.6
   auto_route: ^0.6.9
+  intl: ^0.16.1
+  csv: ^4.1.0
+  path_provider: any
+  permission_handler: any
+#  UI
+  modal_bottom_sheet: 1.0.0+1
   smart_select: ^4.3.2
+  flutter_cupertino_date_picker: ^1.0.25
 
 dev_dependencies:
   auto_route_generator: ^0.6.10
